--- a/index.html
+++ b/index.html
@@ -458,6 +458,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-email">
+          <p>Subscribe</p>
+          <form action="form.php" class="form">
+            <label for="input" class="label"
+              ><input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="email-input"
+                id="input"
+            /></label>
+
+            <button type="submit" class="subscribe-button">
+              Subscribe
+              <svg width="24" height="24" class="icons-svg">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
