--- a/index.html
+++ b/index.html
@@ -480,5 +480,89 @@
         </div>
       </div>
     </footer>
+    <div class="modal">
+      <div class="modal-design">
+        <button type="button" class="button">
+          <svg width="8" height="8" class="icons-svg">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="input-paragraph">
+          Leave your contacts and we will call you back
+        </p>
+
+        <form action="contact.php ">
+          <div class="input-group">
+            <label for="user-name" class="label">Name</label>
+            <div class="input-svg">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="input-user"
+              />
+              <svg width="18" height="24" class="icons-svg">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-group">
+            <label for="user-name" class="label">Phone</label>
+            <div class="input-svg">
+              <input
+                type="text"
+                id="user-phone"
+                name="user-phone"
+                class="input-user"
+              />
+              <svg width="18" height="24" class="icons-svg">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-group">
+            <label for="user-email" class="label">Email</label>
+            <div class="input-svg">
+              <input
+                type="text"
+                id="user-email"
+                name="user-email"
+                class="input-user"
+              />
+              <svg width="18" height="24" class="icons-svg">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-group">
+            <label for="user-comment" class="label">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              class="textarea"
+            ></textarea>
+          </div>
+
+          <div class="privacy">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              class="privacy visually-hidden"
+            />
+            <label for="user-privacy" class="privacy"
+              ><span class="check"
+                ><svg width="10" height="8" class="icons-svg">
+                  <use href="./images/icons.svg#icon-check"></use></svg></span
+              >I accept the terms and conditions of the
+              <a href="" class="privacy-link">Privacy Policy</a></label
+            >
+          </div>
+          <button class="send">SEND</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
